syntax = "proto3";

package minerva.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "minerva/api/minerva/v1;v1";
option java_multiple_files = true;
option java_package = "minerva.v1";
option java_outer_classname = "MinervaProtoV1";

// The minerva service definition.
service MineRva {
  rpc ParseSqlType(ParseSqlTypeRequest) returns (ParseSqlTypeReply) {
    option (google.api.http) = {
      post: "/minerva/parse-sql-type"
      body: "*"
    };
  }
}

message ParseSqlTypeRequest {
  string sql = 1 [(validate.rules).string = {min_len: 5, max_len: 1000000}];
}

message ParseSqlTypeReply {
  message Data {
    message SqlTypes {
      string sql = 1;
      repeated string sql_type = 2;
    }
    repeated SqlTypes sql_types = 1;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}
